<resources>    <string name="app_name">Unicid</string>    <string name="login">Login</string>    <string name="register">Cadastrar</string>    <string name="hint_password">Digite sua senha</string>    <string name="hint_email">Digite seu email</string>    <string name="error_email">Formato de email invalido</string>    <string name="warn">!</string>    <string name="forgot_password">Recuperar senha</string>    <string name="student_area">Área do Aluno</string>    <string name="type_rgm">Digite seu RGM</string>    <string name="hint_name">Digite seu nome</string>    <string name="hint_rgm">Digite seu RGM</string>    <string name="selected">Selecionar</string>    <string name="course_selected">Selecione seu curso</string>    <string name="hint_semester">Digite seu semestre atual</string>    <string name="finish_button">Finalizar</string>    <string name="register_label">Cadastrar</string>    <string name="backButton">Voltar</string>    <string name="ok_label">OK</string>    <string name="success_register_description">Cadastro feito com sucesso!</string>    <string name="error_register_description">Erro ao cadastrar conta, verifique seus dados.</string>    <string name="error_login_description">Erro ao fazer Login, verifique seus dados.</string>    <string name="congratulation_label">Parabens!</string>    <string name="attention_label">Atencão!</string>    <string name="unicid_logo">unicid_logo</string>    <string name="add_label">Adicionar uma nota</string>    <string name="average_description">NOTA</string>    <string name="default_averege">0</string>    <string name="boletim_title_bar">Boletim</string>    <string name="register_title_bar">Cadastro</string>    <string name="under_construction">Em construção</string>    <string name="ave">Nota</string>    <string name="sum_average">Cálculo de média</string>    <string name="select_discipline_label">Selecione a disciplina</string>    <string name="label_hint_a1">Nota A1/Ex: 3.5</string>    <string name="label_hint_a2">Nota A2/Ex: 3.5</string>    <string name="label_hint_af">Nota AF/Ex: 3.5</string>    <string name="save_button_label">Salvar</string>    <string name="boletim">Boletim</string>    <string name="exit_button_label">Sair</string>    <string name="in_construction_label">Tela em construção!</string>    <string name="in_construction_orientation_label">Em breve vamos trazer mais novidades para você.</string></resources>