<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.unicidapp.ui.register.RegisterViewModel" />

        <variable
            name="courseName"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_unicid"
        tools:context=".ui.register.RegisterActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/sixteen_value"
            android:layout_marginTop="@dimen/twenty_four_value"
            android:layout_marginEnd="@dimen/sixteen_value"
            android:layout_marginBottom="@dimen/twenty_four_value"
            android:background="@drawable/shape_card_background"
            android:padding="@dimen/sixteen_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="@dimen/zero_value"
                android:layout_height="@dimen/fifty_two_size"
                android:layout_marginTop="@dimen/fifty_two_value"
                android:background="@drawable/shape_round_corners"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="@dimen/sixteen_value"
                android:textColor="@color/blue_unicid"
                android:textColorHint="@color/blue_unicid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_nome"
                android:layout_width="@dimen/zero_value"
                android:layout_height="@dimen/fifty_two_size"
                android:layout_marginTop="@dimen/sixteen_value"
                android:background="@drawable/shape_round_corners"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:lines="1"
                android:padding="@dimen/sixteen_value"
                android:textColor="@color/blue_unicid"
                android:textColorHint="@color/blue_unicid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="@dimen/zero_value"
                android:layout_height="@dimen/fifty_two_size"
                android:layout_marginTop="@dimen/sixteen_value"
                android:autofillHints=""
                android:background="@drawable/shape_round_corners"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="@dimen/sixteen_value"
                android:textColor="@color/blue_unicid"
                android:textColorHint="@color/blue_unicid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nome" />

            <EditText
                android:id="@+id/et_rgm"
                android:layout_width="@dimen/zero_value"
                android:layout_height="@dimen/fifty_two_size"
                android:layout_marginTop="@dimen/sixteen_value"
                android:background="@drawable/shape_round_corners"
                android:hint="@string/hint_rgm"
                android:inputType="number"
                android:padding="@dimen/sixteen_value"
                android:textColor="@color/blue_unicid"
                android:textColorHint="@color/blue_unicid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_course"
                style="@style/AppTheme.TextInput"
                android:layout_width="@dimen/zero_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_rgm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sixteen_value"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:textColorHint="@color/blue_unicid"
                    android:hint="@string/course_selected"
                    android:inputType="text"
                    android:onClick="@{() -> viewModel.openCourseNameSheet()}"
                    android:textColor="@color/blue_unicid"
                    android:theme="@style/MyTheme.EditText"
                    app:drawableEndCompat="@drawable/ic_dropdown"
                    tools:fontFamily="@font/poppins_regular"
                    tools:text="@{courseName}" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
