<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add"
            android:layout_width="@dimen/zero_value"
            android:layout_height="@dimen/hundred_value"
            android:layout_marginStart="@dimen/twenty_four_value"
            android:layout_marginTop="@dimen/thirty_two_value"
            android:layout_marginEnd="@dimen/twenty_four_value"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/sixteen_value"
            app:cardElevation="@dimen/thirty_six_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_average"
                    android:layout_width="@dimen/sixty_eight_value"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_average"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/twenty_four_value"
                        android:text="@string/default_averege"
                        android:textAlignment="center"
                        android:textAppearance="@style/PoppinsRegularAppearance"
                        android:textColor="@color/blue_unicid"
                        android:textSize="@dimen/twenty_four_size"
                        tools:text="10" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_average_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/average_description"
                        android:textAlignment="center"
                        android:textColor="@color/blue_unicid"
                        android:textSize="@dimen/fourteen_size"
                        tools:text="Nota" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/zero_value"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sixteen_value"
                    android:layout_marginEnd="@dimen/thirty_two_value"
                    android:text="@string/add_label"
                    android:textAlignment="center"
                    android:textAppearance="@style/PoppinsRegularAppearance"
                    android:textColor="@color/blue_unicid"
                    android:textSize="@dimen/twenty_four_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ll_average"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Analise de projetos II" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>